Added styling to whos turn it is

--- a/connectFour.html
+++ b/connectFour.html
@@ -27,7 +27,8 @@
   <div class="container"  align="center">
     <h1>Welcome to Connect Four!</p>
       <h2>Connect 4 chips to win!</h2>
-      <table>
+      <h3>Player Turn <span id="box">Blue</span></h3>
+      <table class='bg'>
         <tr id="row1">
           <td ><button class="start" type="button" name="button"></button></td>        
           <td><button class="start" type="button" name="button"></button></td>
